RESOLVED FIXED221305
[GPUProcess][iOS] Audio is lost after media playback recovers from the GPUProcess crash
https://bugs.webkit.org/show_bug.cgi?id=221305
Summary [GPUProcess][iOS] Audio is lost after media playback recovers from the GPUPro...
Chris Dumez
Reported 2021-02-02 16:31:56 PST
Audio is lost after media playback recovers from the GPUProcess crash (on iOS Only).
Attachments
WIP Patch (7.78 KB, patch)
2021-02-04 09:47 PST, Chris Dumez
no flags
Patch (14.36 KB, patch)
2021-02-04 10:23 PST, Chris Dumez
no flags
Patch (14.34 KB, patch)
2021-02-04 13:20 PST, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2021-02-02 16:32:10 PST
Chris Dumez
Comment 2 2021-02-04 09:47:48 PST
Created attachment 419293 [details] WIP Patch
Chris Dumez
Comment 3 2021-02-04 10:23:29 PST
Peng Liu
Comment 4 2021-02-04 13:16:16 PST
Comment on attachment 419297 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419297&action=review > Source/WebCore/ChangeLog:9 > + The issue was that when the GPUProcess crashed while in the middle on media playback, we would Nit. s/on media playback/of media playback/ > Source/WebKit/ChangeLog:9 > + Fix issue where we would sometimes loose the video after recovering from a GPUProcess Nit. s/loose/lose/ > Source/WebCore/platform/graphics/MediaPlayer.h:-221 > - virtual void mediaPlayerExitFullscreen() { } I am surprised that those two functions are not used. But bots seem to be happy with the removal. :-)
Chris Dumez
Comment 5 2021-02-04 13:20:33 PST
EWS
Comment 6 2021-02-05 07:50:59 PST
Committed r272414: <https://trac.webkit.org/changeset/272414> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419314 [details].
Note You need to log in before you can comment on or make changes to this bug.