Source/WebCore/platform/graphics/MediaPlayer.cpp
@@ -528,21 +528,7 @@ const MediaPlayerFactory* MediaPlayer::nextBestMediaEngine(const MediaPlayerFact
 
 void MediaPlayer::reloadAndResumePlaybackIfNeeded()
 {
-    auto previousMediaTime = currentTime();
-    bool wasPaused = paused();
-
-    // FIXME: It would be even better if we could resume in full screen mode, but, for now, exiting full screen makes the video rendering work.
-    if (client().mediaPlayerFullscreenMode() != MediaPlayer::VideoFullscreenModeNone)
-        client().mediaPlayerExitFullscreen();
-
-    m_currentMediaEngine = nullptr;
-    loadWithNextMediaEngine(nullptr);
-
-    prepareToPlay();
-    if (!wasPaused)
-        play();
-    if (previousMediaTime)
-        seekWhenPossible(previousMediaTime);
+    client().mediaPlayerReloadAndResumePlaybackIfNeeded();
 }
 
 void MediaPlayer::loadWithNextMediaEngine(const MediaPlayerFactory* current)
